Center DH placeholder. CSS whitespace fixes.

--- a/web3/src/app/lineup.component.css
+++ b/web3/src/app/lineup.component.css
@@ -27,6 +27,7 @@ table {
 td input {
   width:30px;
   font-size:14px;
+  text-align: center;
 }
 
 .warnings {
